--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,10 @@ buildscript {
     ext.kotlin_version = "1.4.30"
     ext.nav_version = "2.3.3"
     ext.fragment_version = "1.3.0"
+    ext.retrofit_version = "2.9.0"
+    ext.okhttp_version = "4.9.1"
+    ext.gson_version = "2.8.6"
+    ext.coroutine_version = "1.2.1"
     repositories {
         google()
         jcenter()
