--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     ext.okhttp_version = "4.9.1"
     ext.gson_version = "2.8.6"
     ext.coroutine_version = "1.2.1"
+    ext.koin_version = '2.2.2'
     repositories {
         google()
         jcenter()
